@@ -1,5 +1,6 @@
 package br.com.unicos.ms_ativos.service.impl;
 
+import br.com.unicos.ms_ativos.dto.AtivoListDTO;
 import br.com.unicos.ms_ativos.dto.AtivoRequest;
 import br.com.unicos.ms_ativos.dto.AtivoResponse;
 import br.com.unicos.ms_ativos.enums.StatusAtivo;
@@ -8,59 +9,63 @@ import br.com.unicos.ms_ativos.model.Ativo;
 import br.com.unicos.ms_ativos.repository.AtivoRepository;
 import br.com.unicos.ms_ativos.service.AtivoService;
 import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Implementação da interface {@link AtivoService}.
  * <p>
- * Contém as regras de negócio e interações com o repositório de Ativo.
+ * Contém as regras de negócio relacionadas à gestão dos ativos patrimoniais.
+ * Utiliza o {@link ModelMapper} para conversão entre entidades e DTOs.
  */
 @Service
-@Transactional
+@RequiredArgsConstructor
 public class AtivoServiceImpl implements AtivoService {
 
     private final AtivoRepository ativoRepository;
+    private final ModelMapper modelMapper;
 
-    public AtivoServiceImpl(AtivoRepository ativoRepository) {
-        this.ativoRepository = ativoRepository;
-    }
+    // ===========================================================
+    // 🔹 CRUD BÁSICO
+    // ===========================================================
 
-    // ==================================
-    // 🔹 CRUD
-    // ==================================
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
+    @Transactional
     public AtivoResponse salvar(AtivoRequest request) {
+        Ativo ativo = modelMapper.map(request, Ativo.class);
+
+        // Impede duplicidade de código patrimonial
         if (ativoRepository.findByCodigoPatrimonial(request.codigoPatrimonial()).isPresent()) {
-            throw new DataIntegrityViolationException("Já existe um ativo cadastrado com este código patrimonial.");
+            throw new DataIntegrityViolationException(
+                    "Já existe um ativo com o código patrimonial informado: " + request.codigoPatrimonial()
+            );
         }
 
-        Ativo entity = toEntity(request);
-        Ativo salvo = ativoRepository.save(entity);
-        return toResponse(salvo);
+        Ativo salvo = ativoRepository.save(ativo);
+        return modelMapper.map(salvo, AtivoResponse.class);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
+    @Transactional
     public AtivoResponse atualizar(Long id, AtivoRequest request) {
         Ativo existente = ativoRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Ativo não encontrado."));
+                .orElseThrow(() -> new EntityNotFoundException("Ativo não encontrado com ID: " + id));
 
-        // Verifica duplicidade de código patrimonial
-        ativoRepository.findByCodigoPatrimonial(request.codigoPatrimonial())
-                .ifPresent(outro -> {
-                    if (!outro.getId().equals(id)) {
-                        throw new DataIntegrityViolationException("Já existe um ativo cadastrado com este código patrimonial.");
-                    }
-                });
-
-        // Atualiza manualmente os campos
+        // Atualiza campos permitidos
         existente.setNome(request.nome());
-        existente.setCodigoPatrimonial(request.codigoPatrimonial());
         existente.setDescricao(request.descricao());
         existente.setTipo(request.tipo());
         existente.setStatus(request.status());
@@ -70,123 +75,98 @@ public class AtivoServiceImpl implements AtivoService {
         existente.setEmpresaId(request.empresaId());
         existente.setFilialId(request.filialId());
         existente.setResponsavelId(request.responsavelId());
-        existente.getLocalizacao().setId(request.localizacaoId());
 
         Ativo atualizado = ativoRepository.save(existente);
-        return toResponse(atualizado);
+        return modelMapper.map(atualizado, AtivoResponse.class);
     }
 
-    // ==================================
-    // 🔹 CONSULTAS
-    // ==================================
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    @Transactional(readOnly = true)
+    @Transactional
+    public void excluir(Long id) {
+        Ativo ativo = ativoRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Ativo não encontrado com ID: " + id));
+        ativoRepository.delete(ativo);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public Optional<AtivoResponse> buscarPorId(Long id) {
         return ativoRepository.findById(id)
-                .map(this::toResponse);
+                .map(entity -> modelMapper.map(entity, AtivoResponse.class));
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    @Transactional(readOnly = true)
-    public Optional<AtivoResponse> buscarPorCodigoPatrimonial(String codigoPatrimonial) {
-        return ativoRepository.findByCodigoPatrimonial(codigoPatrimonial)
-                .map(this::toResponse);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<AtivoResponse> listarTodos() {
+    public List<AtivoListDTO> listarTodos() {
         return ativoRepository.findAll()
                 .stream()
-                .map(this::toResponse)
-                .toList();
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<AtivoResponse> buscarPorEmpresa(Long empresaId) {
-        return ativoRepository.findByEmpresaId(empresaId)
-                .stream()
-                .map(this::toResponse)
-                .toList();
-    }
+    // ===========================================================
+    // 🔍 CONSULTAS ESPECÍFICAS
+    // ===========================================================
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    @Transactional(readOnly = true)
-    public List<AtivoResponse> buscarPorFilial(Long filialId) {
-        return ativoRepository.findByFilialId(filialId)
-                .stream()
-                .map(this::toResponse)
-                .toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<AtivoResponse> buscarPorTipo(TipoAtivo tipo) {
+    public List<AtivoListDTO> buscarPorTipo(TipoAtivo tipo) {
         return ativoRepository.findByTipo(tipo)
                 .stream()
-                .map(this::toResponse)
-                .toList();
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    @Transactional(readOnly = true)
-    public List<AtivoResponse> buscarPorStatus(StatusAtivo status) {
+    public List<AtivoListDTO> buscarPorStatus(StatusAtivo status) {
         return ativoRepository.findByStatus(status)
                 .stream()
-                .map(this::toResponse)
-                .toList();
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 
-    // ==================================
-    // 🔹 DELETE
-    // ==================================
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public void deletar(Long id) {
-        if (!ativoRepository.existsById(id)) {
-            throw new EntityNotFoundException("Ativo não encontrado para exclusão.");
-        }
-        ativoRepository.deleteById(id);
+    public List<AtivoListDTO> buscarPorEmpresa(Long empresaId) {
+        return ativoRepository.findByEmpresaId(empresaId)
+                .stream()
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 
-    // ==================================
-    // 🧭 MÉTODOS AUXILIARES
-    // ==================================
-
-    private Ativo toEntity(AtivoRequest request) {
-        Ativo ativo = new Ativo();
-        ativo.setNome(request.nome());
-        ativo.setCodigoPatrimonial(request.codigoPatrimonial());
-        ativo.setDescricao(request.descricao());
-        ativo.setTipo(request.tipo());
-        ativo.setStatus(request.status());
-        ativo.setDataAquisicao(request.dataAquisicao());
-        ativo.setValorAquisicao(request.valorAquisicao());
-        ativo.setValorAtual(request.valorAtual());
-        ativo.setEmpresaId(request.empresaId());
-        ativo.setFilialId(request.filialId());
-        ativo.setResponsavelId(request.responsavelId());
-        ativo.getLocalizacao().setId(request.localizacaoId());
-        return ativo;
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<AtivoListDTO> buscarPorFilial(Long filialId) {
+        return ativoRepository.findByFilialId(filialId)
+                .stream()
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 
-    private AtivoResponse toResponse(Ativo entity) {
-        return new AtivoResponse(
-                entity.getId(),
-                entity.getNome(),
-                entity.getCodigoPatrimonial(),
-                entity.getDescricao(),
-                entity.getTipo(),
-                entity.getStatus(),
-                entity.getDataAquisicao(),
-                entity.getValorAquisicao(),
-                entity.getValorAtual(),
-                entity.getEmpresaId(),
-                entity.getFilialId(),
-                entity.getResponsavelId(),
-                entity.getLocalizacao().getId()
-        );
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<AtivoListDTO> buscarPorResponsavel(Long responsavelId) {
+        return ativoRepository.findByResponsavelId(responsavelId)
+                .stream()
+                .map(entity -> modelMapper.map(entity, AtivoListDTO.class))
+                .collect(Collectors.toList());
     }
 }
